--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,2 +1,3 @@
 spring.data.mongodb.uri=mongodb+srv://root:root@catalystgirl.hzk78b4.mongodb.net/?retryWrites=true&w=majority
 spring.data.mongodb.database=Catalystgirl
+spring.mvc.pathmatch.matching-strategy = ANT_PATH_MATCHER
